--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,8 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/screen.css' />
+    <script src='/socket.io/socket.io.js'></script>
+    <script src='http://code.jquery.com/jquery-1.7.2.min.js'></script>
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -19,6 +21,6 @@
         <div class="footer-content">&#169;</div>
       </div>
     </div>
-    <script src="/javascripts/ga.js"></script>
+    <script src="/javascripts/socket.io.client.js"></script>
   </body>
 </html>
