--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,16 @@
   </form>
 
 <% todos.forEach( function ( todo ){ %>
-  <div class="item">
+  <div id="<%= todo._id %>" class="item">
     <a class="update-link" href="/edit/<%= todo._id %>" title="Update this todo item"><%= todo.content %></a>
     <a class="del-btn" href="/destroy/<%= todo._id %>" title="Delete this todo item">Delete</a>
   </div>
 <% }); %>
+</div>
+
+<div id="js-list-template" class="js-template">
+  <div id="{{list-id}}" class="item">
+    <a class="update-link" href="/edit/{{list-id}}" title="Update this todo item">{{list-content}}</a>
+    <a class="del-btn" href="/destroy/{{list-id}}" title="Delete this todo item">Delete</a>
+  </div>
 </div>
