--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,7 +4,7 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/screen.css' />
     <script src='/socket.io/socket.io.js'></script>
-    <script src='http://code.jquery.com/jquery-1.7.2.min.js'></script>
+    <script src='/javascripts/jquery.js'></script>
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
