modify layout, make them simple and only a create button to be a index page.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,8 +16,8 @@
     </div>
     <div id="footer-wrap">
       <div id="footer">
-        <div class="footer-content"><a id="github-link" href="https://github.com/dreamerslab/express-todo-example" target="_blank">Code</a> by</div>
-        <a href="http://dreamerslab.com/" id="dreamerslab" target="_blank">DreamersLab</a>
+        <div class="footer-content"><a id="github-link" href="https://github.com/clonn/express-todo-example" target="_blank">Source Code</a> by</div>
+        <a href="http://clonn.blogspot.tw/" id="Caesar Chi" target="_blank">Caesar Chi</a>
         <div class="footer-content">&#169;</div>
       </div>
     </div>
